# rag-chatbot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.streamlit  README.md  demo.html  embeddings_explorer.py  ingestor.py  main.py  rag.py  railway.toml  schema.sql  session-notes.md  ui.py
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  chunker.py  db.py  ingestor.py  main.py  rag.py
backend/app/static/: widget.js
frontend/: Dockerfile.streamlit  ui.py
