[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.109.1",
    "fastapi>=0.136.3",
    "pypdf>=6.13.2",
    "python-multipart>=0.0.32",
    "streamlit>=1.58.0",
    "supabase>=2.31.0",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
    "voyageai>=0.4.0",
]
